@@ -130,6 +130,16 @@
 			$flag = 1;
 			break;
 
+		case 'stats':
+			if(!isset($_SESSION['AdminId']))
+			{
+				redirect_to(BASE_URL);
+				exit;
+			}
+			require_once 'page_stats.php';
+			$flag = 1;
+			break;
+
 		case 'pages':
 			if(!isset($_SESSION['AdminId']))
 			{
